# quizmaker

./: .gitignore  CMakeLists.txt  Info.plist  Makefile  README.md  main.cpp  Лист_задания_образец_4к9691_2ззззззззззззззз.docx
data/: answers.txt  questions.txt  quizzes.txt  users.txt
data/reports/: quiz_report_1.html
